--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,20 @@
 # main links
 main:
   - title: "Machine Learning"
-    url: /machine-learning/
+    url: /ml/
+
+  - title: "Research"
+    url: /research/
+
   - title: "About"
     url: /about/
 
+
 ml:
   - title: "Machine Learning"
-    url: /machine-learning/
-    children:
-        - title: "Research"
-          url: /research/
-        - title: "ML4U Notes"
-          url: /ml4u/
-        - title: "Other Projects"
-          url: /projects/
-        - title: "ML Algorithm implementations"
-          url: /small-bang/
+    url: /ml/
+
+rs:
+- title: "Research"
+  url: /research/
+
