--- a/_config.yml
+++ b/_config.yml
@@ -261,6 +261,16 @@ compress_html:
   ignore:
     envs: development
 
+ 
+# Collections
+collections:
+  research:
+    output: true
+    permalink: /:categories/:title/
+  ml:
+    output: true
+    permalink: /:categories/:title/
+
 
 # Defaults
 defaults:
@@ -273,6 +283,30 @@ defaults:
       author_profile: true
       read_time: true
       comments: # true
+      share: true
+      related: true
+
+  # _research
+  - scope:
+      path: ""
+      type: research
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
+  # _ml
+  - scope:
+      path: ""
+      type: ml
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
       share: true
       related: true
 
