--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "Machine Learning"
+  - title: "Machine Learning & Teaching"
     url: /ml/
 
   - title: "Research"
