Change email to NYU

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:bruno.gomes.coelho@usp.br
+      url: mailto:bruno.coelho@nyu.edu
 
     - label: " Resume"
       icon: "fas fa-file"
